[package]
name = "audiosurfscrobblerlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_qs = "0.12.0"

[lib]
name = "audiosurfscrobblerlib"
crate-type = ["cdylib"]
