[package]
name = "audiosurfscrobblerlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_derive = "1.0.189"
serde_qs = "0.12.0"
mljcl = { git = "https://github.com/duckfromdiscord/mljcl", default_features = false }
url = "2.4.1"
msgbox = "0.7.0"

[lib]
name = "audiosurfscrobblerlib"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
strip = "debuginfo"
